--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ firmware/_firmware.bin*extracted/
 firmware/dpkg-repack*
 firmware/version
 firmware/packages.full.list
-
+firmware/UI_URL
 *.bin
 !spec/*.bin
 
