--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-firmware/_firmware.bin*extracted/
-firmware/dpkg-repack*
-firmware/version
-firmware/packages.full.list
+firmware/_*extracted/
+
+firmware/packages.ui.list
 firmware/UI_URL
+
+source/usr/lib/version
+source/tmp
+
 *.bin
 !spec/*.bin
 
