Added dockerfile dev version

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,15 @@
+#[1] Use Debian 11 base image for ARM64v8
 FROM arm64v8/debian:11
 
 ARG DEBIAN_FRONTEND=noninteractive
 
+# Package versions
+ARG NODEJS_VERSION=16
+ARG PG_VERSION=14
+
+ARG DEBS_PATH=tmp/dpkg
+
+#[2] Install default packages from the web
 RUN apt-get update \
     && apt-get -y --no-install-recommends install \
         curl \
@@ -23,10 +31,12 @@ RUN apt-get update \
         systemd-timesyncd \
     && rm -rf /var/lib/apt/lists/*
 
-RUN curl -sL https://deb.nodesource.com/setup_16.x | bash - \
-    && apt-get install -y --no-install-recommends nodejs \
+#[3] Install NodeJS on debian (https://github.com/nodesource/distributions#debinstall)
+RUN curl -fsSL https://deb.nodesource.com/setup_${NODEJS_VERSION}.x | bash - \
+    && apt-get install -y nodejs \
     && rm -rf /var/lib/apt/lists/*
 
+#[4] Install systemd, followed by removing some files
 RUN apt-get update \
     && apt-get -y --no-install-recommends install systemd \
     && find /etc/systemd/system \
@@ -39,35 +49,39 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 STOPSIGNAL SIGKILL
 
+#[5] Installing postgress
 RUN curl -sL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /etc/apt/trusted.gpg.d/apt.postgresql.org.gpg >/dev/null \
     && echo "deb http://apt.postgresql.org/pub/repos/apt/ bullseye-pgdg main" > /etc/apt/sources.list.d/postgresql.list \
     && apt-get update \
-    && apt-get -y --no-install-recommends install postgresql-14 postgresql-9.6 \
+    && apt-get -y --no-install-recommends install postgresql-${PG_VERSION} \
     && rm -rf /var/lib/apt/lists/*
 
-COPY put-deb-files-here/*.deb /
-COPY put-version-file-here/version /usr/lib/version
-COPY files/lib /lib/
+#[7]
+COPY source/${DEBS_PATH}/*.deb /${DEBS_PATH}
+COPY source/lib /lib/
 
-RUN apt-get -y --no-install-recommends install /ubnt-archive-keyring_*_arm64.deb \
+#[8] Installing Ubu related parts
+RUN apt-get -y --no-install-recommends install ${DEBS_PATH}ubnt-archive-keyring_*_arm64.deb \
     && echo 'deb https://apt.artifacts.ui.com bullseye main release beta' > /etc/apt/sources.list.d/ubiquiti.list \
     && chmod 666 /etc/apt/sources.list.d/ubiquiti.list \
     && apt-get update \
-    && apt-get -y --no-install-recommends install /*.deb unifi-protect \
-    && rm -f /*.deb \
-    && rm -rf /var/lib/apt/lists/* \
-    && echo "exit 0" > /usr/sbin/policy-rc.d \
+    && apt-get -y --no-install-recommends install /${DEBS_PATH}/*.deb unifi-protect \
+    && rm -f /${DEBS_PATH}/*.deb \
+    && rm -rf /var/lib/apt/lists/* 
+
+#[9]
+RUN echo "exit 0" > /usr/sbin/policy-rc.d \
     && sed -i 's/redirectHostname: unifi//' /usr/share/unifi-core/app/config/config.yaml \
     && mv /sbin/mdadm /sbin/mdadm.orig \
     && mv /usr/sbin/smartctl /usr/sbin/smartctl.orig \
-    && systemctl enable storage_disk dbpermissions\
+    && systemctl enable storage_disk dbpermissions \
     && pg_dropcluster --stop 9.6 main \
     && sed -i 's/rm -f/rm -rf/' /sbin/pg-cluster-upgrade \
     && sed -i 's/OLD_DB_CONFDIR=.*/OLD_DB_CONFDIR=\/etc\/postgresql\/9.6\/main/' /sbin/pg-cluster-upgrade
 
-COPY files/sbin /sbin/
-COPY files/usr /usr/
-COPY files/etc /etc/
+#[X]
+COPY source/sbin /sbin/
+COPY source/usr /usr/
 
 VOLUME ["/srv", "/data", "/persistent"]
 
