--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,13 +3,13 @@ version: '3'
 services:
   uios:
     build: 
-      dockerfile: Dockerfile.os
+      dockerfile: Dockerfile.dev
     container_name: uios
     volumes:
       # - /sys/fs/cgroup:/sys/fs/cgroup:ro
-      - /storage/srv:/srv
-      - /storage/data:/data
-      - /storage/persistent:/persistent
+      - ./storage/srv:/srv
+      - ./storage/data:/data
+      - ./storage/persistent:/persistent
       - /etc/localtime:/etc/localtime
     environment:
       - STORAGE_DISK=/dev/sda2
@@ -22,9 +22,4 @@ services:
     network_mode: host
     cgroup: host
     ipc: private
-
-  uios-db:
-    build:
-      dockerfile: Dockerfile.db  
-    container_name: uios-db
 
