--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -57,11 +57,11 @@ RUN curl -sL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor 
     && rm -rf /var/lib/apt/lists/*
 
 #[7]
-COPY source/${DEBS_PATH}/*.deb /${DEBS_PATH}
+COPY source/${DEBS_PATH}/*.deb /${DEBS_PATH}/
 COPY source/lib /lib/
 
 #[8] Installing Ubu related parts
-RUN apt-get -y --no-install-recommends install ${DEBS_PATH}ubnt-archive-keyring_*_arm64.deb \
+RUN apt-get -y --no-install-recommends install /${DEBS_PATH}/ubnt-archive-keyring_*_arm64.deb \
     && echo 'deb https://apt.artifacts.ui.com bullseye main release beta' > /etc/apt/sources.list.d/ubiquiti.list \
     && chmod 666 /etc/apt/sources.list.d/ubiquiti.list \
     && apt-get update \
