--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
   uios:
     build: 
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.test
     container_name: uios
     volumes:
       # - /sys/fs/cgroup:/sys/fs/cgroup:ro
