--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3'
 services:
   uios:
     build: 
-      dockerfile: Dockerfile.test
+      dockerfile: Dockerfile-test
     container_name: uios
     volumes:
       # - /sys/fs/cgroup:/sys/fs/cgroup:ro
@@ -23,3 +23,15 @@ services:
     cgroup: host
     ipc: private
 
+  uios-build:
+    build: 
+      dockerfile: ./firmware/Dockerfile-build
+    container_name: uios-build
+    volumes:
+      - ./firmware:/firmware
+      - ./source:/source
+    restart: unless-stopped
+    privileged: true
+    network_mode: host
+    cgroup: host
+    ipc: private
