--- a/Dockerfile-test
+++ b/Dockerfile-test
@@ -1,5 +1,6 @@
 #[1] Use Debian 11 base image for ARM64v8
 FROM arm64v8/debian:11
+ARG DEBIAN_NAME=bullseye
 
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -15,9 +16,10 @@ RUN apt-get update \
         apt \
         apt-utils \
         apt-transport-https \
+        curl \
+        dpkg \
         mount \
         psmisc \
-        dpkg \
         lsb-release \
         sudo \
         gnupg \
@@ -28,47 +30,48 @@ RUN apt-get update \
         ethtool \
         procps \
         systemd-timesyncd \
+        vim-tiny \
         zstd \
         xz-utils \
     && rm -rf /var/lib/apt/lists/*
 
+#[3] Install NodeJS on debian (https://github.com/nodesource/distributions#debinstall)
+RUN curl -fsSL https://deb.nodesource.com/setup_${NODEJS_VERSION}.x | bash - \
+    && apt-get install -y nodejs \
+    && rm -rf /var/lib/apt/lists/*
 
+#[4] Install systemd, followed by removing some files
+RUN apt-get update \
+    && apt-get -y --no-install-recommends install systemd \
+    && find /etc/systemd/system \
+        /lib/systemd/system \
+        -path '*.wants/*' \
+        -not -name '*journald*' \
+        -not -name '*systemd-tmpfiles*' \
+        -not -name '*systemd-user-sessions*' \
+        -exec rm \{} \; \
+    && rm -rf /var/lib/apt/lists/*
+STOPSIGNAL SIGKILL
 
-# #[3] Install NodeJS on debian (https://github.com/nodesource/distributions#debinstall)
-# RUN curl -fsSL https://deb.nodesource.com/setup_${NODEJS_VERSION}.x | bash - \
-#     && apt-get install -y nodejs \
-#     && rm -rf /var/lib/apt/lists/*
-
-# #[4] Install systemd, followed by removing some files
-# RUN apt-get update \
-#     && apt-get -y --no-install-recommends install systemd \
-#     && find /etc/systemd/system \
-#         /lib/systemd/system \
-#         -path '*.wants/*' \
-#         -not -name '*journald*' \
-#         -not -name '*systemd-tmpfiles*' \
-#         -not -name '*systemd-user-sessions*' \
-#         -exec rm \{} \; \
-#     && rm -rf /var/lib/apt/lists/*
-# STOPSIGNAL SIGKILL
-
-# #[5] Installing postgress
-# RUN curl -sL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /etc/apt/trusted.gpg.d/apt.postgresql.org.gpg >/dev/null \
-#     && echo "deb http://apt.postgresql.org/pub/repos/apt/ bullseye-pgdg main" > /etc/apt/sources.list.d/postgresql.list \
-#     && apt-get update \
-#     && apt-get -y --no-install-recommends install postgresql-${PG_VERSION} \
-#     && rm -rf /var/lib/apt/lists/*
+#[5] Installing postgress
+RUN curl -sL https://www.postgresql.org/media/keys/ACCC4CF8.asc | gpg --dearmor | tee /etc/apt/trusted.gpg.d/apt.postgresql.org.gpg >/dev/null \
+    && echo "deb http://apt.postgresql.org/pub/repos/apt/ ${DEBIAN_NAME}-pgdg main" > /etc/apt/sources.list.d/postgresql.list \
+    && apt-get update \
+    && apt-get -y --no-install-recommends install postgresql-${PG_VERSION} \
+    && rm -rf /var/lib/apt/lists/*
 
 #[7]
 COPY source/${DEBS_PATH}/*.deb /${DEBS_PATH}/
 COPY source/lib /lib/
 
-#[8] Installing Ubu related parts
+#[8] Adding ubnt repository
 RUN apt-get -y --no-install-recommends install /${DEBS_PATH}/ubnt-archive-keyring_*_arm64.deb \
     && echo 'deb https://apt.artifacts.ui.com bullseye main release beta' > /etc/apt/sources.list.d/ubiquiti.list \
     && chmod 666 /etc/apt/sources.list.d/ubiquiti.list \
-    && apt-get update \
-    && apt-get -y --no-install-recommends install /${DEBS_PATH}/*.deb unifi-protect 
+    && apt-get update 
+
+#[9]     
+RUN apt-get -y --no-install-recommends install /${DEBS_PATH}/*.deb unifi-protect 
     #&& rm -f /${DEBS_PATH}/*.deb \
     #&& rm -rf /var/lib/apt/lists/* 
 
