--- a/firmware/Dockerfile-build
+++ b/firmware/Dockerfile-build
@@ -5,6 +5,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
     && apt-get -y --no-install-recommends install \
         apt \
+        systemd \
         binwalk \
         dpkg \
         dpkg-repack \
